pod_secret.yml
apiVersion: v1
kind: Pod
metadata:
  name: private-pod-vedecom
spec:
  containers:
    - name: private-pod-vedecom
      image: aris3/vedecom_new:v2
  imagePullSecrets:
    - name: vedecom-secret
