vedecom-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vedecom-deployment
  labels:
    app: vedecom-app
spec:
  replicas: 1
  selector:
    matchLabels:
      name: vedecom-pod
      app: vedecom-app
  template:
    metadata:
      name: vedecom-pod
      labels:
        name: vedecom-pod
        app: vedecom-app
    spec:
     containers:
        - name: vedecom-openc2x
          image: aris3/openc2x_docker:v1
          ports:
            - containerPort: 80
