vedecom-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: vedecom-pod
  labels:
    name: vedecom-pod
    app: vedecom-app
spec:
  containers:
  - name: vedecom-openc2x
    image: aris3/openc2x_docker:v1
    ports:
    - containerPort: 80
