vedecom-app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: vedecom-service
  labels:
    name: vedecom-service
    app: vedecom-app
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
  selector:
    name: vedecom-pod
    app: vedecom-app
